# arise-nlp

./: README.md  Visualizations.ipynb  arise-reqs.txt  arise.py  controller.py  nlp-requirements.txt  send_request.ipynb  server.py  talapas.md  utils.py
nlp/: Dockerfile  environment.yml  pyproject.toml  send_request.py
nlp/nlu-engine/: credentials.yml  domain.yml  endpoints.yml  headless  requirements.txt  run
nlp/nlu-engine/data/: composite.json  intents.yml  lookups.yml  stories.yml  synonyms.yml
webhook/: README.md  pyproject.toml  run
webhook/actions/: actions.py  actions.py.bak  task.py
webhook/res/dataset/: conflict_training.csv
webhook/res/results/conflicts/: conflicts_10000_forest.csv  conflicts_10000_log.csv  conflicts_10000_svm.csv  conflicts_1000_forest.csv  conflicts_1000_log.csv  conflicts_1000_svm.csv  conflicts_100_forest.csv  conflicts_100_log.csv  conflicts_2500_forest.csv  conflicts_2500_log.csv  conflicts_2500_svm.csv  conflicts_5000_forest.csv  conflicts_5000_log.csv  conflicts_5000_svm.csv  conflicts_500_forest.csv  conflicts_500_log.csv  conflicts_500_svm.csv  conflicts_campi_all.csv  conflicts_campi_all_summary.csv  conflicts_campi_uni.csv  conflicts_campi_uni_summary.csv  conflictssummary_0.csv
webhook/res/results/extraction/: extraction_alpha_1.csv  extraction_alpha_10.csv  extraction_alpha_11.csv  extraction_alpha_12.csv  extraction_alpha_13.csv  extraction_alpha_14.csv  extraction_alpha_15.csv  extraction_alpha_16.csv  extraction_alpha_17.csv  extraction_alpha_18.csv  extraction_alpha_19.csv  extraction_alpha_2.csv  (+81 more)
(+93 files in other folders)
