[tool.poetry]
name = "webhook"
version = "0.1.0"
description = "ARISE Webhook"
authors = ["Jared Knofczynski <jared@cs.uoregon.edu>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
rasa = "^2.8.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pylint = "*"
pylint-venv = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
